--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ input[type=number]::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
-/* /* Hide the arrows in label inp */
+/* /* above code Hide the arrows in label inp */
 body{
 background-color: rgb(68, 82, 171);
 width: 1400px;
@@ -14,6 +14,7 @@ height: 800px;
     height: 620px;
     display: flex;
     flex-wrap: wrap;
+    border: 10px solid rgb(40, 38, 38);
    margin-left: 500px;
    margin-top: 90px;
 }
@@ -47,4 +48,5 @@ height: 800px;
     font-size: 70px;
     text-align: end;
     border: 10px solid rgb(114, 109, 109);
+   
 }
